# Multiphysique

./: CMakeLists.txt  FE2.cpp  FE2.h  NewtonRaphson.cpp  NewtonRaphson.h  NewtonRaphson_v1.cpp  NewtonRaphson_v1.h  NewtonRaphson_v2.cpp  README.md  devenv-codeblocks.bat  fem.cpp  fem.h  gmshio.cpp  gmshio.h  main.cpp  physicalio.cpp  physicalio.h
geo/: Honey_comb.geo  Honey_comb.msh  Honey_comb.phy  Honey_comb_try.geo  Honey_comb_try.phy  carreSimple.geo  carreSimple.phy  l.phy
